<resources>
    <string name="app_name">SPA</string>

    <string name="engage"><u>Engage</u></string>
    <string name="reply">Reply</string>
    <string name="share">Share</string>
    <string name="post">Post</string>
    <string name="newfeed">New feed</string>
    <string name="name"><b>First name</b></string>
    <string name="sur_name"><b>Surname</b></string>
    <string name="dialog_text">"What's up?</string>


    <!-- Navigation Drawer -->
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ammar Ahmed</string>
    <string name="nav_header_subtitle">140 Sentiments</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- menu.xml -->
    <string name="action_appreciative">Appreciative</string>
    <string name="action_abusive">Abusive</string>
    <string name="action_suggestive">Suggestive</string>
    <string name="action_serious_concern">Serious Concern</string>
    <string name="action_disappointed">Disappointed</string>
    <string name="action_display_all">Display All</string>


    <!-- Bottom Navigation -->
    <string name="title_search">Search</string>
    <string name="title_mentions_visualization">Mentions Visualization</string>
    <string name="title_home">Home</string>
    <string name="title_mentions">Mentions</string>


    <!-- fragment_search.xml -->
    <string name="bottom_nav_search">Search</string>


    <!-- fragment_mentions_visualization.xmlation.xml -->
    <string name="bottom_nav_notifications">Notifications</string>


    <!-- fragment_profile22.xml -->
    <string name="twitterUsername">\@Ammary07</string>


    <!-- fragment_setting -->
    <string name="log_reg">Logistic Regression</string>
    <string name="rnn">Recurrent Neural Network</string>
    <string name="naive_bayes">Naive Bayes</string>



    <!-- Twitter SDK -->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">8X65tNQZSUkeD0xx5hIjbr3nb</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">pHMUcJ1jSphXnTcPI5w9czKF0QSoYDzfrC952d8FEMJYlNzGse</string>
    <string name="custom_log_in_with_twitter">Custom Log in with Twitter</string>
    <string name="get_profile_image">Fetch Profile Image</string>




    <!-- Menu/visualization.xml-->
    <string name="action_pie_chart">Pie Chart</string>
    <string name="action_bar_chart">Bar Chart</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
