<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/surName"
            android:layout_marginStart="22dp"
            android:background="#000000"
            android:padding="1dp"
            android:src="@drawable/person" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/profileImageView"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/surName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/name"
            android:text="@string/sur_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/profileImageView"
            android:text="@string/sur_name"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/feedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImageView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />


        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/feedText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/facebooklike_smaller" />

        <TextView
            android:id="@+id/likeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/likeButton"
            android:text="@string/engage" />

        <ImageView
            android:id="@+id/commentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/likeView"
            android:src="@drawable/commentfb" />

        <TextView
            android:id="@+id/commentView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/commentButton"
            android:text="@string/reply" />

        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/commentView"
            android:src="@drawable/sharesmaller" />

        <TextView
            android:id="@+id/shareView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewBottom"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/shareButton"
            android:text="@string/share" />
    </RelativeLayout>
</android.support.v7.widget.CardView>